fix: fix my mistakes